additional minor edits

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -526,6 +526,10 @@ with a discussion about:
 \item Who is a potential candidate for authorship on the paper
 \end{enumerate}
 
+We draft papers in \LaTeX, either on GitHub or on \href{https://www.overleaf.com/}{Overleaf}
+(an online platform that supports text editing and compiling PDFs in
+the browser).  Progress should be shared regularly via Slack.
+
 \subsection{Authorship guidelines}
 \marginnote{\texttt{TASK:} review the
   \href{https://oir.nih.gov/sites/default/files/uploads/sourcebook/documents/ethical_conduct/guidelines-authorship_contributions.pdf}{NIH
