added clarification re: edits vs issues

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -174,7 +174,11 @@ our general research approach and lab policies.
 \noindent \marginnote{\texttt{TASK:}
   Upon reading through this lab manual for the first time, please make
   at least one edit.  You could correct a typo, clarify something
-  that's unclear, add a comment via the \href{https://github.com/ContextLab/lab-manual/issues}{GitHub issues page}, etc.  Importantly, be sure to submit
+  that's unclear, add a comment, etc.  Also add (or comment on) an
+  issue via the
+  \href{https://github.com/ContextLab/lab-manual/issues}{GitHub issues
+    page}; you can use the existing issues to help decide what to
+  focus on for own edits if you'd like.  Importantly, be sure to submit
   a pull request with your edits to the manual's
   \href{https://github.com/ContextLab/lab-manual}{GitHub
     repository} so that everyone can benefit.}
@@ -1337,7 +1341,7 @@ need access to RAPPORT then let \director~know.
 \item I am proficient in \LaTeX, allowing me to edit and understand
   this lab manual's source code.
 \item I have submitted one or more edits to the lab manual by making a
-  pull request or adding an issue via the
+  pull request to the
   \href{https://github.com/ContextLab/lab-manual}{GitHub repository}.
   \item I have read \href{https://www.sciencemag.org/careers/2018/11/what-can-we-learn-dartmouth}{Leah Somerville's commentary} on speaking
     out in toxic or abusive environments.
