saving edits through pg 28

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -991,7 +991,7 @@ schedules of grad students and undergraduates.
 
  \subsection{Attendance policy}
  In general, we expect full time employees to be in the lab during
- ``standard'' working hours-- roughly between 9 AM and 5 PM.  The
+ ``standard'' working hours---roughly between 9 AM and 5 PM.  The
  precise range of hours you work is less important to us than putting
  in an effort to help form a cohesive lab culture where lab members
  can interact in person to share ideas, leverage expertise, solve
@@ -999,10 +999,10 @@ schedules of grad students and undergraduates.
  hours, we'd like you to make a strong effort to be physically present
  in the lab between 1 and 4 pm (prior arrangements notwithstanding;
  e.g. if you have a long commute and we've agreed that you won't come
- in every day, and if you need to occasionally schedule an
- appointment during the 1--4 pm window you can do so).  Similarly, if
+ in every day, or if you need to occasionally schedule an
+ appointment during the 1--4 pm window).  Similarly, if
  you are a part time employee, we'd like you to try to put in your
- in-the-lab hours during the 1 to 4 pm time window as often as
+ in-the-lab hours during the 1--4 pm time window as often as
  possible.
 
 The lab also abides by Dartmouth's standard paid time off policies for
@@ -1023,24 +1023,23 @@ appropriate arrangements.  \textbf{With the above in mind, we abide by
   \coordinator~can help get you set up with that system.}  If you
 cannot attend a lab event or meeting, your privacy will be respected:
 you do not (generally speaking) need to provide a reason for your
-absence (although you are honor bound not to abuse this system!)-- but
+absence (although you are honor bound not to abuse this system!) but
 you are expected to responsibly manage your schedule so that you get
 your work done and minimize inconvenience to others to the extent
 possible.  The one exception is that if you seem to be abusing this
 system (e.g.\ as determined by your project owner, project
 coordinator, or fellow team members), you may be asked to provide
-additional information (in a way that does not invade your privacy--
-and if you are worried that this policy is overly intrusive, please
+additional information (in a way that does not invade your privacy---and
+ if you are worried that this policy is overly intrusive, please
 bring your concerns to \director~or \coordinator).  Here's the
 official lab attendance policy:
 \begin{itemize}
 \item It is your responsibility to provide notice, well in advance, to anyone your absence will
   affect (e.g. \director, \coordinator, people you're scheduled to
-  meet with, etc.).  The best way to do this is via email or Slack.
-  We also use an
-  \href{https://calendar.google.com/calendar/ical/h1j06dohcg7v1g2o5tkb7ijhvs\%40group.calendar.google.com/private-239aaf8b4dc60480c90e8d7fc353e229/basic.ics}{``out-of-lab''
-    calendar} to keep track of things like vacations or longer planned
-  absences.
+  meet with, etc.).  The best way to do this is via email or Slack, along with adding your
+  absence to the 
+  \href{https://calendar.google.com/calendar/ical/h1j06dohcg7v1g2o5tkb7ijhvs\%40group.calendar.google.com/private-239aaf8b4dc60480c90e8d7fc353e229/basic.ics}{out-of-lab
+    calendar}.
 \begin{itemize}
 \item You are responsible for accounting for your planned absences
   when we discuss project schedules and goals.  If you agree to take on work
@@ -1052,7 +1051,7 @@ official lab attendance policy:
   2 weeks in advance.
 \item Brief (one day) absences (excluding weekends, and lab-related
   absences) should be scheduled as far in advance as possible, but at
-  least at the beginning of the week.
+  least at the beginning of the week, excepting, of course, for emergency situations.
 \end{itemize}
 
 \item If you are feeling sick, \textit{do not come into the lab}.  We can
@@ -1072,8 +1071,8 @@ official lab attendance policy:
   poster), you are expected to attend the conference to present your
   work.  In the extremely rate event that an emergency situation
   arises that would prevent you from presenting as scheduled, you are
-  expected to make alternative arrangements, e.g.\ by arranging for a
-  co-author to present in your place.
+  expected to make alternative arrangements (e.g.\ by arranging for a
+  co-author to present in your place).
 
 \item You are strongly encouraged (but never required) to attend
   relevant journal clubs, PBS talks, DHMC
@@ -1179,7 +1178,7 @@ When you link your Discovery account with the lab, you will
 automatically have access to those additional computing resources.  We
 use Discovery for our most computationally intensive work.
 \href{https://trello-attachments.s3.amazonaws.com/56f548a3cb4847c27668e504/56f7ff07085632013a40545a/44c1921381d6193eca67e9c875a32960/discovery_cluster_tutorial.pdf}{This
-  link} contains instructions for creating an account and accessing
+  link} contains instructions for creating an account and accessing 	% potentially add link to cluster tutorial when completed
 the Discovery cluster.  Our suggested workflow is to do non-intensive
 computations and analyses on your personal desktop or laptop computer,
 and to offload more intensive analyses to Discovery.  The lab's code
@@ -1204,7 +1203,7 @@ repository includes
    approximate travel budget, including all registration fees,
    tickets, meals, etc.  Your budget should not include lab events
    (e.g.\ lab dinners), which are covered by a separate mechanism.
-   Your budget must be approved by \director prior to submitting an
+   Your budget must be approved by \director~prior to submitting an
    abstract in order for the lab to cover your expenses.  (Your
    expenses will be covered up the agreed-upon amount, at which point
    you are responsible for making your travel plans accordingly,
@@ -1217,8 +1216,8 @@ repository includes
    conference registration fees will be guaranteed by the lab,
    \textit{under the assumption that you will also make reasonable
      efforts to seek out alternative sources of travel funding} (e.g.\
-   through PBS, other internal Dartmouth sources, apply for travel
-   awards, use personal grants like NRSAs or NSF fellowships, etc.).
+   through PBS, other internal Dartmouth sources, applying for travel
+   awards, using personal grants like NRSAs or NSF fellowships, etc.).
    You are also expected to keep costs low (e.g.\ fly economy class,
    seek out cheaper tickets, stay in reasonably priced hotels, share a
    room with other lab members, etc.).  By the same token, we also
@@ -1258,6 +1257,7 @@ options with \director.
 
 
  \subsection{Poster printing}
+ \marginnote{\texttt{NOTE:} Be sure to coordinate with \director~regarding the funding source covering your poster printing cost prior to going to print your poster.}
  There are two on-campus poster printers.  One is in the Map Room of
  Baker Library.  More information may be found
  \href{http://www.dartmouth.edu/~library/maproom/printingfaq.html}{here}.
@@ -1275,14 +1275,15 @@ options with \director.
 All costs related to lab publications will be fully covered by the
 lab.  \coordinator~can help facilitate these payments.
 
- \subsection{Subject payments}
- Most in-lab experimental subjects will be paid via t-points.
+ \subsection{Subject compensation}
+ Most in-lab experimental subjects will be compensated via t-points.
  Coordinate with \coordinator~in order to receive a t-point allocation
  well in advance of the start of the term you wish to run
  participants.
 
- Cash subject payments for lab research projects will be fully covered by
- the lab.  Subject payment guidelines are generally found in the IRB
+\marginnote{\texttt{NOTE:}In some cases, external funding sources may be available to cover cash subject payments (e.g. \href{https://students.dartmouth.edu/ugar/research/programs/honors-thesis-grant}{undergraduate Honors Thesis Grants}). Coordinate with \director~or \coordinator~to determine whether alternative funding sources are available for your project.}
+ Cash subject payments for lab research projects will in most cases be fully covered by
+ the lab (see the \texttt{NOTE}).  Subject payment guidelines are generally found in the IRB
  approval documentation relevant to your project.  For Mechanical Turk
  experiments, a subject payments budget should be approved prior to
  beginning the experiment.  Cash payments may be made via petty cash,
